# 2024-04-22-Talk-PyConDE-Metaclasses

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: README.md  autostring_demo.ipynb
slides/: metaclasses.md
slides/code/: autostring.py  autostring_demo.py  exercises.ipynb  part2.ipynb  slide0_methods.py  slide12_walkthru.py  slide1_runtime.py  slide20_meta_alternatives.py  slide23_keywords.py  slide5_dynamic_class.py  slide9_better_repr.py
slides/css/: style.css
slides/js/: footer.js
