[tool.poetry]
name = "2024-04-22-Talk-PyConDE-Metaclasses"
version = "0.1.0"
description = "Metaclasses: Pra que servem? Onde vivem? Como se reproduzem?"
authors = ["Leonardo Rochael Almeida <leorochael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.5.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
